<resources>
    <string name="app_name">汇数数据</string>
    <string name="loading">请稍候</string>
    <string name="net_error">网络访问错误，请稍后再试</string>
    <string name="download">下载中心</string>
    <string name="search">搜索</string>
    <!-- 共享过度动画 -->
    <string name="transition_photos">transition_animation_news_photos</string>
    <string name="channel_manage">频道管理</string>
    <string name="my_channel">我的频道       长按并拖拽可排序</string>
    <string name="more_channel">更多频道       点击添加</string>
    <string name="reload">重新尝试</string>
    <string name="empty">还没有数据</string>
    <string name="news_from">%1$s %2$s</string>
    <string name="title_activity_login">登陆</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hs_empty"></string>
    <string name="hs_working">工作台</string>
    <string name="hs_scan">扫一扫</string>
    <string name="camera_permission_required">本功能需要相机权限！</string>
    <!--客户自提-->
    <string name="hs_scan_result_label">扫码结果</string>
    <string name="hs_sms_static_tip">请输入验证码</string>
    <string name="hs_customer_invite">客户自提</string>
    <string name="hs_thrxm">提货人姓名</string>
    <string name="hs_thrsj">提货人手机</string>
    <string name="hs_thrsfz">提货人身份证号</string>
    <string name="hs_submit">提交</string>
    <string name="hs_customer_invite_next">下一步，签收单拍照</string>
    <string name="hs_customer_invite_submit">提交并出库</string>
    <string name="hs_idCard_positive">头像面拍照</string>
    <string name="hs_idCard_contrary">国徽面拍照</string>
    <string name="hs_check_success">已验证</string>
    <string name="hs_idCard_success">已拍照</string>
    <string name="hs_sign_order_tip">请逐页拍照已签字的签收单 </string>
    <string name="hs_sign_order_camera">签收单拍照 </string>
    <!--签收单上传-->
    <string name="hs_sign_order_title">签收单上传</string>
    <string name="hs_sign_order_nav_1">扫描二维码</string>
    <string name="hs_sign_order_nav_2">未上传清单</string>
    <string name="hs_sign_order_upload_submit">拍照完成，确认提交</string>
    <!--文字图标-->
    <string name="hs_icon_waichubaifang">&#xe60c;</string>
    <string name="hs_icon_kafei">&#xe612;</string>
    <string name="hs_icon_kucun">&#xe6c1;</string>
    <string name="hs_icon_app_qingjia">&#xe602;</string>
    <string name="hs_icon_ziyuan">&#xe601;</string>
    <string name="hs_icon_diandeng">&#xe608;</string>
    <string name="hs_icon_qingjia">&#xe631;</string>
    <string name="hs_icon_baifang">&#xe64e;</string>
    <string name="hs_icon_tanhao">&#xe600;</string>
    <string name="hs_icon_dalou">&#xe60a;</string>
    <string name="hs_icon_xuanzekehu">&#xe7bc;</string>
    <string name="hs_icon_chakanmingxi">&#xe603;</string>
    <string name="hs_icon_wifi">&#xe604;</string>
    <string name="hs_icon_erweima">&#xe630;</string>
    <string name="hs_icon_ribao">&#xe605;</string>
    <string name="hs_icon_qianshoudan">&#xe65d;</string>
    <string name="hs_icon_hetong">&#xe65c;</string>
    <string name="hs_icon_daiban">&#xe61a;</string>
    <string name="hs_icon_kaoqin">&#xe60f;</string>
    <string name="hs_icon_qianshouchaxun_yuluru">&#xe624;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
